infra/k8s/dev/agent/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: agent
  labels:
    app: agent
    env: dev
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: sleeman01.fursa.click
      http:
        paths:
          - path: /dev/api(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: agent
                port:
                  number: 8000
